--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>ListaVIP</title>
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
 <div class="container">
     <div class="jumbotron" align="center" style="margin-top: 50px;">
         <h1>Seja bem vindo ao ListaVIPs</h1>
         <div align="center">
-            <a href="listavip" class="btn btn-lg btn-primary">Clique aqui para ver a lista de convidados</a>
+            <a href="listaconvidados" class="btn btn-lg btn-primary">Clique aqui para ver a lista de convidados</a>
         </div>
     </div>
 </div>
